--- a/DDVTracker.csproj
+++ b/DDVTracker.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\NewFolder\**" />
+    <Content Remove="wwwroot\NewFolder\**" />
+    <EmbeddedResource Remove="wwwroot\NewFolder\**" />
+    <None Remove="wwwroot\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Controllers\CollectionsController.cs" />
   </ItemGroup>
 
@@ -24,8 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\NewFolder\" />
-    <Folder Include="wwwroot\NewFolder\" />
+    <Folder Include="Views\Collections\" />
   </ItemGroup>
 
 </Project>
