Updated to use azure database in production and localdb in development

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DDVTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:ddvtrackerdbserver.database.windows.net,1433;Initial Catalog=DDVTracker_db;User Id={DBUsername};Password={DBPassword};MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
