--- a/DDVTracker.csproj
+++ b/DDVTracker.csproj
@@ -19,6 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.1" />
+    <PackageReference Include="Azure.Identity" Version="1.11.4" />
     <PackageReference Include="bootstrap" Version="5.3.3" />
     <PackageReference Include="datatables.net" Version="2.1.4" />
     <PackageReference Include="jQuery" Version="3.7.1" />
