--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -15,7 +15,9 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5181",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://ddvtrackervault.vault.azure.net/",
+        "AZURE_USERNAME": "jennpeterson986@gmail.com"
       }
     },
     "https": {
@@ -24,14 +26,18 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7063;http://localhost:5181",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://ddvtrackervault.vault.azure.net/",
+        "AZURE_USERNAME": "jennpeterson986@gmail.com"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://ddvtrackervault.vault.azure.net/",
+        "AZURE_USERNAME": "jennpeterson986@gmail.com"
       }
     }
   }
