Attempting to connect to blob storage

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DDVTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DDVTracker;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BlobStorageConnectionString": "UseDevelopmentStorage=true"
   },
+  "LocalFilePath": "wwwroot",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
