--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "datatables.net-dt": "^2.1.4"
+    "datatables.net-dt": "^2.1.4",
+    "glob": "^11.0.0",
+    "lru-cache": "^11.0.0",
+    "rimraf": "^6.0.1",
+    "uuid": "^10.0.0"
   }
 }
